make-a-wish-salesforce/src/objects/Wish_Required_Signature_File__c.object
<CustomObject>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Path__c</fullName>
        <label>File Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <formula>IF(!(ISBLANK(Shortcut__c )), RIGHT(Shortcut__c, (LEN(Shortcut__c) - FIND(':', Shortcut__c))), 
IF(File_Size_in_Bytes__c &gt; 1024, 
IF(File_Size_in_Bytes__c &gt; 1048576, 
IF(File_Size_in_Bytes__c &gt; 1073741824, 
TEXT(ROUND((File_Size_in_Bytes__c /1073741824),2)) &amp; " GB", 
TEXT(ROUND((File_Size_in_Bytes__c /1048576),2)) &amp; " MB"), 
TEXT(ROUND((File_Size_in_Bytes__c /1024),2)) &amp; " KB"), 
TEXT(File_Size_in_Bytes__c) &amp; " bytes"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size_in_Bytes__c</fullName>
        <label>File Size in Bytes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Latest_Version__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Latest Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Count__c</fullName>
        <label>Page Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Folder_Id__c</fullName>
        <label>Parent Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Folder_Name__c</fullName>
        <label>Parent Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview_Key__c</fullName>
        <label>Preview Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview_Version_Id__c</fullName>
        <label>Preview Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shortcut__c</fullName>
        <label>Shortcut</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Thumbnail_Key__c</fullName>
        <label>Thumbnail Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail_Version_Id__c</fullName>
        <label>Thumbnail Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Description__c</fullName>
        <label>Version Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Id__c</fullName>
        <label>Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Id__c</fullName>
        <description>Required for SDrive File Sync</description>
        <label>Sync Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Required_Signature__c</fullName>
        <label>Wish Required Signature</label>
        <referenceTo>Wish_Required_Signature__c</referenceTo>
        <relationshipLabel>Wish Required Signature Files</relationshipLabel>
        <relationshipName>Wish_Required_Signature_Files1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Wish Required Signature File</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Wish_Required_Signature_File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wish Required Signature Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>